Style fixes for see more of our work button on mobile

--- a/assets/scss/components/_case-study-block--more.scss
+++ b/assets/scss/components/_case-study-block--more.scss
@@ -1,10 +1,15 @@
 
 .c-case-study-block--more {
   $self: '.c-case-study-block';
-  height: 8rem;
 
   @include breakpoint(from-small) {
+    height: 8rem;
     --clip-dist-h: 40px;  // horizontal clip-path polygon distance
     --clip-dist-v: 18px;  // vertical clip-path polygon distance
+  }
+
+  #{$self}__link {
+    margin-top: 1.5rem;
+    display: block !important;
   }
 }
